# ragdoll

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config_question.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  _jwt_secret.sh  _secret.sh
deploy/aws/app-runner/: deploy.sh  template.yaml
deploy/aws/ecs-fargate/: deploy.sh  template.yaml
deploy/azure/aci/: main.json
deploy/azure/container-apps/: main.json
deploy/gcp/cloud-run/: deploy.sh
deploy/gcp/gce/: deploy.sh
docker/: Dockerfile
docker/cont-init.d/: 10-paths-init  20-models-ensure  30-migrate-guard
docker/services.d/ragdoll-gateway/: run
docker/services.d/ragdoll-worker/: run
docs/: README.md  architecture.md  chunking.md  concepts.md  configuration.md  getting-started.md  ingestion.md  models.md  operations.md  pitfalls.md  querying.md
docs/tutorial/: data_ingestion_tutorial.ipynb
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  modelCatalog.test.ts  modelCatalog.ts  permissions.ts  styles.css
migrations/: 0001_init.sql
python/: README.md  pyproject.toml
python/src/ragdoll_worker/: __main__.py  config.py  db.py  models.py  reconcile.py  webhooks.py  worker.py
python/src/ragdoll_worker/chunk/: __init__.py  boundaries.py  semantic_split.py  sentences.py  tokens.py  units.py
python/src/ragdoll_worker/extract/: __init__.py  files.py
python/tests/: conftest.py  job_helpers.py  test_boundaries.py  test_boundaries_extended.py  test_config.py  test_db_helpers.py  test_extract.py  test_extract_extended.py  test_models.py  test_models_onnx.py  test_reconcile.py  test_semantic_split.py  test_semantic_split_extended.py  test_sentences.py  test_tokens.py  test_tokens_extended.py  test_units_markdown.py  test_units_plain.py  test_webhooks.py  test_worker.py  test_worker_loop.py
scripts/: check_embedding_consistency.py  dev-local.sh  dev.sh
src/: cli.rs  config.rs  crypto.rs  lib.rs  main.rs  release.rs  staging.rs  system_metrics.rs  telemetry.rs
src/api/: analytics.rs  api_keys.rs  auth.rs  backups.rs  batch.rs  chunks.rs  db_viewer.rs  error.rs  health.rs  ingest_jobs.rs  llm_credentials.rs  llm_models.rs  mod.rs  models.rs  openapi.rs  queries.rs  reindex.rs  releases.rs  router.rs  settings.rs  sources.rs  sources_list.rs  stages.rs  system_metrics.rs  users.rs  webhooks.rs
src/auth/: bootstrap.rs  endpoint_permissions.rs  jwt.rs  middleware.rs  mod.rs  password.rs  permissions.rs  rate_limit.rs
src/backup/: mod.rs
src/db/: error.rs  migrations.rs  mod.rs  model_guard.rs  params.rs  pool.rs
src/filter/: dsl.rs  mod.rs  sql.rs
src/generation/: endpoints.rs  genai_impl.rs  mock.rs  mod.rs  prompt.rs  resolver.rs  service.rs  types.rs  vertex.rs
src/models/: bootstrap.rs  catalog.rs  custom_models.rs  download.rs  download_io.rs  embed.rs  mapping.rs  mock.rs  mod.rs  registry.rs  rerank.rs  traits.rs
src/search/: citation.rs  hybrid.rs  mod.rs  pipeline.rs  score.rs
src/settings/: mod.rs
src/webhooks/: dispatch.rs  host_utilization.rs  mod.rs
tests/: auth_ingest.rs  crud.rs  db_integration.rs  generation_queries.rs  http_api.rs  search_queries.rs
tests/support/: mod.rs
(+107 files in other folders)
