[project]
name = "ragdoll-worker"
version = "0.1.0"
description = "Ragdoll ingest worker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Ragdoll Contributors" }]
dependencies = [
    "fastembed>=0.6.0",
    "httpx>=0.28.0",
    "libsql-experimental>=0.0.55",
    "numpy>=2.1.0",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pydantic>=2.10.0",
    "pypdf>=5.1.0",
    "pysbd>=0.3.4",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pytesseract>=0.3.13",
    "structlog>=24.4.0",
    "tokenizers>=0.21.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
ragdoll-worker = "ragdoll_worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragdoll_worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ragdoll_worker"]

[[tool.mypy.overrides]]
module = [
    "libsql_experimental",
    "libsql_experimental.*",
    "openpyxl",
    "openpyxl.*",
    "pysbd",
    "pysbd.*",
    "pytesseract",
    "pytesseract.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=ragdoll_worker --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["ragdoll_worker"]

[tool.coverage.report]
show_missing = true
skip_empty = true
